--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
-    <title>Blocks!</title>
+    <title>Document</title>
 </head>
 <body>
-    <button id="playBtn">Play</button>
-    <table id="board">
-        
-    </table>
+   <button id="play">Start</button>
+   <p>Timer: <span id="timer">0</span></p>
+   <table id="table"></table>
 </body>
 </html>
