--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="lose"></div>
    <button id="play">Start</button>
    <p>Timer: <span id="timer">0</span></p>
    <table id="table"></table>
